# Compiler-Project

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  a.out  test.s
src/: compiler.rs  driver.rs  error.rs  file_table.rs  lexer.rs  lib.rs  logger.rs  main.rs  options.rs  span.rs  token.rs
src/backend/: ir.rs  mod.rs  print_ir.rs  rburg_template.rs
src/backend/amd64/: backend.rs  emit.rs  mod.rs  ralloc.rs  ralloc_linear.rs  ralloc_normal.rs  ralloc_simple.rs  registers.rs  utility.rs
src/backend/ir/: control_flow_graph.rs  ir.rs  ir_phi.rs  mod.rs  print_ir.rs
src/backend/register_allocation/: linear.rs  mod.rs  old.rs  ralloc.rs  register_allocation.rs  register_class.rs  register_interface.rs  register_location.rs  simple.rs
src/eval/: evaluation_context.rs  expression_eval.rs  global_eval.rs  jump_eval.rs  mod.rs  optimize.rs  statement_eval.rs
src/ir/: control_flow_graph.rs  ir.rs  ir_phi.rs  mod.rs  print_ir.rs
src/optimization/: dead_block_elimination.rs  dead_code_elimination.rs  mod.rs  remove_variable.rs
src/parser/: ast.rs  ast_graph.rs  ast_print.rs  mod.rs  parse_declaration.rs  parse_delimiters.rs  parse_expression.rs  parse_global.rs  parse_statement.rs  parse_struct.rs  recovery.rs  type.rs
src/semantic_analysis/: analysis.rs  const_eval.rs  expression_analysis.rs  global_analysis.rs  mod.rs  statement_analysis.rs  symbol_table.rs  type_checking.rs  type_class.rs  type_promotion.rs
src/table/: mod.rs  struct_table.rs
src/utility/: mod.rs
tests/: full_scale.rs  performance.rs
tests/src/: .gitignore  LICENSE  README.md
(+154 files in other folders)
