[package]
edition = "2018"
name = "utcc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]
name = "utcc_lib"
path = "src/lib.rs"

[[bin]]
name = "utcc"
path = "src/main.rs"

[dependencies]
bitvec = "~0.22.3" #MIT
clap = "~2.33.3" #apache 2.0 or MIT
colored = "~2.0.0" #MPL 2.0
log = "~0.4.14" #apache 2.0 or MIT
rburg = {path = "./src/rburg"} 
smallvec = {version = "~1.7.0", features = ["union"]}#apache 2.0 or MIT
